add form submission; return data based on format feature

--- a/.env.example
+++ b/.env.example
@@ -2,4 +2,6 @@ METABASE_EMAIL=
 METABASE_PASSWORD=
 METABASE_BASE_URL=
 QISMO_BASE_BACKEND_URL=
+FORM_SENT_CARD_ID=
+FORM_SUBMISSION_CARD_ID=
 PORT=
